[gd_scene load_steps=17 format=3 uid="uid://b760b36pe00us"]

[ext_resource type="Texture2D" uid="uid://1q46dxhpoqu5" path="res://Assets/sprites/slime_green.png" id="1_444oi"]
[ext_resource type="Script" uid="uid://doguno8i03h45" path="res://src/enemies.gd" id="1_rbk1d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rbk1d"]
atlas = ExtResource("1_444oi")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0i1u"]
atlas = ExtResource("1_444oi")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_aovqv"]
atlas = ExtResource("1_444oi")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mhwu"]
atlas = ExtResource("1_444oi")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6e6f"]
atlas = ExtResource("1_444oi")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rose5"]
atlas = ExtResource("1_444oi")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i2se"]
atlas = ExtResource("1_444oi")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2d8w"]
atlas = ExtResource("1_444oi")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bovd3"]
atlas = ExtResource("1_444oi")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p340g"]
atlas = ExtResource("1_444oi")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_l60gh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbk1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0i1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aovqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mhwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6e6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rose5")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i2se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2d8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bovd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p340g")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_444oi"]
size = Vector2(10, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_rbk1d"]
radius = 11.045361

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbk1d"]
size = Vector2(362, 15)

[node name="Enemies" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_rbk1d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l60gh")
animation = &"attack"
autoplay = "idle"
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_444oi")
debug_color = Color(0, 0, 0, 0.6862745)

[node name="Get_Hurt" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Get_Hurt"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_rbk1d")
debug_color = Color(0.961024, 2.5027991e-06, 0.5154511, 0.41960785)

[node name="Detect_Player" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_Player"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_rbk1d")
debug_color = Color(0.65029216, 0.32928917, 1, 0.41960785)

[node name="ShootPivot" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(9, 0)

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Get_Hurt" to="." method="_on_get_hurt_area_entered"]
[connection signal="body_entered" from="Detect_Player" to="." method="_on_detect_player_body_entered"]
